TODO: PRODUCT_INSTALL_MODE=PASSIVEの時、最後にウィザードをユーザが閉じなくてもいいようにする
git-svn-id: http://192.168.1.101/repos/mozilla/meta-installer@10488 6a2af300-271d-0410-9c6b-d974dc746de0

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,4 @@
   -> PRODUCT_NAMEさえ変更しておけば現状でもいいかも
 * インストール済みFirefoxを全部列挙する(必要か?)
 * アンインストーラを含むディレクトリが自動で削除されないことがあるっぽい？
+* PRODUCT_INSTALL_MODE=PASSIVEの時、最後にウィザードをユーザが閉じなくてもいいようにする
